2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi: add GDatalist bindings,
	  patch by Marc-Andre Lureau, fixes bug 527243

	* vapi/packages/gtk+-2.0/: fix GtkSettings binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: support generic structs

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala: fix typo

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* compiler/valacompiler.vala: enable non-null types by default,
	  replace --enable-non-null commandline option by --disable-non-null

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* */*.vala: fix build when using non-null types

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valacodecontext.vala, vala/valasemanticanalyzer.vala,
	  gobject/valaccodegenerator.vala, compiler/valacompiler.vala:
	  Add --enable-non-null-experimental commandline option

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vala/valasymbolresolver.vala:
	  fix issues when using non-null types

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: deprecate construct as parameter modifier,
	  fixes bug 524138

	* */*.vala: port to new syntax

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: report warning when using obsolete syntax
	  for non-null types

	* */*.vala, */*.vapi: port to new syntax

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: report warning when using deprecated syntax
	  for property default values

	* vala/valaconstructor.vala, vala/valaenum.vala: port to new syntax

2008-04-13  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi (Value): add init, register_transform, and
	boxed bindings, fixes bug 514349.

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* vala/valaerrortype.vala, vala/valasemanticanalyzer.vala: never use
	  ClassType for ErrorType instances

	* vapi/glib-2.0.vapi: use errordomains instead of enums with
	  [ErrorDomain] attribute
